# md

./: README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
mini_display/: __init__.py  display.py  plugin_adapter.py  plugin_base.py  utils.py
mini_display/plugins/: __init__.py  clock_plugin.py  subway_plugin.py  weather_plugin.py
